--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,6 @@ LastExecutedLaunchName=DESKTOP-JO61P5T
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bAllowArcballRotate=False
@@ -112,13 +111,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/Flag_Cloth
-MRUItem1=/Game/LandscapeHole
-MRUItem2=/Game/NightVision
-MRUItem3=/Game/BluePrintTutorial
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/BluePrintTutorial
+MRUItem2=/Game/LandscapeHole
+MRUItem3=/Game/Flag_Cloth
 MRUItem4=/Game/Fog
-MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem6=/Game/NightScene
+MRUItem5=/Game/NightScene
+MRUItem6=/Game/NightVision
 MRUItem7=/Game/NewMap
 MRUItem8=/Game/1
 
@@ -247,12 +246,13 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,
-PostProcessComponent=PostProcessComponent.PostProcessVolume.Lens
+PostProcessComponent=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens|BloomAdvanced,PostProcessComponent.PostProcessVolume.Lens|Bloom,PostProcessComponent.PostProcessVolume.Lens|ExposureAdvanced,PostProcessComponent.PostProcessVolume.Lens|Exposure,PostProcessComponent.PostProcessVolume.Lens|Chromatic Aberration,PostProcessComponent.PostProcessVolume.Lens|Dirt Mask,PostProcessComponent.PostProcessVolume.Lens|Camera,PostProcessComponent.PostProcessVolume.Color Grading|Global,PostProcessComponent.PostProcessVolume.Color Grading|Shadows,PostProcessComponent.PostProcessVolume.Color Grading|Midtones,PostProcessComponent.PostProcessVolume.Color Grading|Highlights,PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Rendering Features|Ambient Cubemap,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Global Illumination,PostProcessComponent.PostProcessVolume.Rendering Features|Motion Blur,PostProcessComponent.PostProcessVolume.Rendering Features|Screen Space Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Translucency,PostProcessComponent.PostProcessVolume.Rendering Features|PathTracing,PostProcessComponent.PostProcessVolume.Rendering Features,
 FirstPersonCharacter_C=
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Rendering.TextureStreaming,SkeletalMeshActor.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,
-K2Node_VariableGet=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,FirstPersonCharacter_C.Collision.Collision,PostProcessComponent.PostProcessVolume.Lens,
+K2Node_VariableGet=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,FirstPersonCharacter_C.Collision.Collision,PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens|BloomAdvanced,PostProcessComponent.PostProcessVolume.Lens|Bloom,PostProcessComponent.PostProcessVolume.Lens|ExposureAdvanced,PostProcessComponent.PostProcessVolume.Lens|Exposure,PostProcessComponent.PostProcessVolume.Lens|Chromatic Aberration,PostProcessComponent.PostProcessVolume.Lens|Dirt Mask,PostProcessComponent.PostProcessVolume.Lens|Camera,PostProcessComponent.PostProcessVolume.Color Grading|Global,PostProcessComponent.PostProcessVolume.Color Grading|Shadows,PostProcessComponent.PostProcessVolume.Color Grading|Midtones,PostProcessComponent.PostProcessVolume.Color Grading|Highlights,PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Rendering Features|Ambient Cubemap,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Global Illumination,PostProcessComponent.PostProcessVolume.Rendering Features|Motion Blur,PostProcessComponent.PostProcessVolume.Rendering Features|Screen Space Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Translucency,PostProcessComponent.PostProcessVolume.Rendering Features|PathTracing,PostProcessComponent.PostProcessVolume.Rendering Features,
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Lens,
+FloatProperty=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens|BloomAdvanced,PostProcessComponent.PostProcessVolume.Lens|Bloom,PostProcessComponent.PostProcessVolume.Lens|ExposureAdvanced,PostProcessComponent.PostProcessVolume.Lens|Exposure,PostProcessComponent.PostProcessVolume.Lens|Chromatic Aberration,PostProcessComponent.PostProcessVolume.Lens|Dirt Mask,PostProcessComponent.PostProcessVolume.Lens|Camera,PostProcessComponent.PostProcessVolume.Color Grading|Global,PostProcessComponent.PostProcessVolume.Color Grading|Shadows,PostProcessComponent.PostProcessVolume.Color Grading|Midtones,PostProcessComponent.PostProcessVolume.Color Grading|Highlights,PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Rendering Features|Ambient Cubemap,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Global Illumination,PostProcessComponent.PostProcessVolume.Rendering Features|Motion Blur,PostProcessComponent.PostProcessVolume.Rendering Features|Screen Space Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Translucency,PostProcessComponent.PostProcessVolume.Rendering Features|PathTracing,PostProcessComponent.PostProcessVolume.Rendering Features,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -283,7 +283,7 @@ GlobalAssetPicker.ActiveFrontendFilters=
 GlobalAssetPicker.EnabledFrontendFilters=
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1204,28 +1204,33 @@ SceneComponent.Physics=True
 SceneComponent.LOD=True
 SceneComponent.AssetUserData=True
 SceneComponent.Collision=True
+K2Node_InputTouch.Input=True
+FirstPersonExampleMap_C.Tick=True
+FirstPersonExampleMap_C.Replication=True
+FirstPersonExampleMap_C.Input=True
+FirstPersonExampleMap_C.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem2=/Game/ThermoVision/Thermal_Mat
-MRUItem3=/Game/NightVision/PP_Camera_Inst
-MRUItem4=/Game/Meshes/FLAG/Flag_PhysicsAsset
-MRUItem5=/Game/Meshes/FLAG/Flag
-MRUItem6=/Game/Meshes/FLAG/Pole_MAT
-MRUItem7=/Game/Meshes/FLAG/UE4_Flag
-MRUItem8=/Game/Meshes/FLAG/Flag_MAT
-MRUItem9=/Game/NightVision/PP_Camera
-MRUItem10=/Game/NightVision/ColorLUT_NightVision
-MRUItem11=/Game/Door
-MRUItem12=/Game/BluePrintTutorial
-MRUItem13=/Game/LandscapeHole
-MRUItem14=/Game/NightScene
-MRUItem15=/Game/Fog
-MRUItem16=/Game/StarterContent/Materials/LocalFog
-MRUItem17=/Game/Geometry/Meshes/1M_Cube_DM
-MRUItem18=/Game/StarterContent/Materials/M_Ground_Moss
-MRUItem19=/Game/Landscape_H
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/BluePrintTutorial
+MRUItem2=/Game/ThermoVision/Thermal_Mat_Inst
+MRUItem3=/Game/LandscapeHole
+MRUItem4=/Game/NightVision/PP_Camera_Inst
+MRUItem5=/Game/NightVision/PP_Camera
+MRUItem6=/Game/ThermoVision/Thermal_Mat
+MRUItem7=/Game/Flag_Cloth
+MRUItem8=/Game/Fog
+MRUItem9=/Game/NightScene
+MRUItem10=/Game/NightVision
+MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem13=/Game/Meshes/FLAG/Flag_PhysicsAsset
+MRUItem14=/Game/Meshes/FLAG/Flag
+MRUItem15=/Game/Meshes/FLAG/Pole_MAT
+MRUItem16=/Game/Meshes/FLAG/UE4_Flag
+MRUItem17=/Game/Meshes/FLAG/Flag_MAT
+MRUItem18=/Game/NightVision/ColorLUT_NightVision
+MRUItem19=/Game/Door
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/FogCloud_MAT.FogCloud_MAT=0
@@ -1255,6 +1260,10 @@ MRUItem19=/Game/Landscape_H
 /Game/NightVision/PP_Camera.PP_Camera=0
 /Game/Flag_Cloth_BuiltData.Flag_Cloth_BuiltData=1
 /Game/Meshes/FLAG/UE4_Flag.UE4_Flag=1
+/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
+/Game/NightVision/PP_Camera_Inst.PP_Camera_Inst=0
+/Game/ThermoVision/Thermal_Mat_Inst.Thermal_Mat_Inst=0
+/Game/ThermoVision/Thermal_Mat.Thermal_Mat=0
 
 [MaterialEditor]
 PrimType=1
@@ -1315,7 +1324,7 @@ bMaterialQualityUsed[2]=0
 [DetailPropertyExpansion]
 ParticleSystem="\"Object.Bounds.FixedRelativeBoundingBox\" \"Object.Occlusion.CustomOcclusionBounds\" \"Object.Materials.NamedMaterialSlots\" "
 FXSystemAsset="\"Object.Bounds.FixedRelativeBoundingBox\" \"Object.Occlusion.CustomOcclusionBounds\" \"Object.Materials.NamedMaterialSlots\" "
-Object=
+Object="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
@@ -1346,8 +1355,8 @@ Landscape="\"Object.Landscape.LandscapeMaterialsOverride\" "
 LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Console.ConsoleKeys\" "
 PostProcessComponent="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+ActorComponent="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
 FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -1362,6 +1371,9 @@ LightComponentBase="\"Object.Light.LightingChannels\" "
 DestructibleActor="\"Object.Actor.Tags\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
+GeneralProjectSettings="\"Object.Settings\" "
+Engine="\"Object.Settings\" "
+PaperRuntimeSettings="\"Object.Settings\" "
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
