--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -246,13 +246,15 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.AxisMappings,
-PostProcessComponent=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens|BloomAdvanced,PostProcessComponent.PostProcessVolume.Lens|Bloom,PostProcessComponent.PostProcessVolume.Lens|ExposureAdvanced,PostProcessComponent.PostProcessVolume.Lens|Exposure,PostProcessComponent.PostProcessVolume.Lens|Chromatic Aberration,PostProcessComponent.PostProcessVolume.Lens|Dirt Mask,PostProcessComponent.PostProcessVolume.Lens|Camera,PostProcessComponent.PostProcessVolume.Color Grading|Global,PostProcessComponent.PostProcessVolume.Color Grading|Shadows,PostProcessComponent.PostProcessVolume.Color Grading|Midtones,PostProcessComponent.PostProcessVolume.Color Grading|Highlights,PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Rendering Features|Ambient Cubemap,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Global Illumination,PostProcessComponent.PostProcessVolume.Rendering Features|Motion Blur,PostProcessComponent.PostProcessVolume.Rendering Features|Screen Space Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Translucency,PostProcessComponent.PostProcessVolume.Rendering Features|PathTracing,PostProcessComponent.PostProcessVolume.Rendering Features,
+PostProcessComponent=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens
 FirstPersonCharacter_C=
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Rendering.TextureStreaming,SkeletalMeshActor.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,
-K2Node_VariableGet=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,FirstPersonCharacter_C.Collision.Collision,PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens|BloomAdvanced,PostProcessComponent.PostProcessVolume.Lens|Bloom,PostProcessComponent.PostProcessVolume.Lens|ExposureAdvanced,PostProcessComponent.PostProcessVolume.Lens|Exposure,PostProcessComponent.PostProcessVolume.Lens|Chromatic Aberration,PostProcessComponent.PostProcessVolume.Lens|Dirt Mask,PostProcessComponent.PostProcessVolume.Lens|Camera,PostProcessComponent.PostProcessVolume.Color Grading|Global,PostProcessComponent.PostProcessVolume.Color Grading|Shadows,PostProcessComponent.PostProcessVolume.Color Grading|Midtones,PostProcessComponent.PostProcessVolume.Color Grading|Highlights,PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Rendering Features|Ambient Cubemap,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Global Illumination,PostProcessComponent.PostProcessVolume.Rendering Features|Motion Blur,PostProcessComponent.PostProcessVolume.Rendering Features|Screen Space Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Translucency,PostProcessComponent.PostProcessVolume.Rendering Features|PathTracing,PostProcessComponent.PostProcessVolume.Rendering Features,
+K2Node_VariableGet=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,FirstPersonCharacter_C.Collision.Collision,PostProcessComponent.PostProcessVolume.Lens,
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Lens,
-FloatProperty=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens|BloomAdvanced,PostProcessComponent.PostProcessVolume.Lens|Bloom,PostProcessComponent.PostProcessVolume.Lens|ExposureAdvanced,PostProcessComponent.PostProcessVolume.Lens|Exposure,PostProcessComponent.PostProcessVolume.Lens|Chromatic Aberration,PostProcessComponent.PostProcessVolume.Lens|Dirt Mask,PostProcessComponent.PostProcessVolume.Lens|Camera,PostProcessComponent.PostProcessVolume.Color Grading|Global,PostProcessComponent.PostProcessVolume.Color Grading|Shadows,PostProcessComponent.PostProcessVolume.Color Grading|Midtones,PostProcessComponent.PostProcessVolume.Color Grading|Highlights,PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Rendering Features|Ambient Cubemap,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Global Illumination,PostProcessComponent.PostProcessVolume.Rendering Features|Motion Blur,PostProcessComponent.PostProcessVolume.Rendering Features|Screen Space Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Reflections,PostProcessComponent.PostProcessVolume.Rendering Features|Ray Tracing Translucency,PostProcessComponent.PostProcessVolume.Rendering Features|PathTracing,PostProcessComponent.PostProcessVolume.Rendering Features,
+FloatProperty=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens
+StructProperty=PostProcessComponent.PostProcessVolume.Lens,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,FirstPersonCharacter_C.Collision.Collision,
+ObjectProperty=PostProcessComponent.PostProcessVolume.Lens,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -283,13 +285,13 @@ GlobalAssetPicker.ActiveFrontendFilters=
 GlobalAssetPicker.EnabledFrontendFilters=
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1209,28 +1211,63 @@ FirstPersonExampleMap_C.Tick=True
 FirstPersonExampleMap_C.Replication=True
 FirstPersonExampleMap_C.Input=True
 FirstPersonExampleMap_C.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Cube_C.Tick=True
+Cube_C.Rendering=True
+Cube_C.Replication=True
+Cube_C.Collision=True
+Cube_C.Input=True
+Cube_C.Actor=True
+StaticMeshSimulationComponent.Variable=True
+StaticMeshSimulationComponent.Warning=True
+StaticMeshSimulationComponent.Sockets=True
+StaticMeshSimulationComponent.ChaosPhysics=True
+StaticMeshSimulationComponent.Tags=True
+StaticMeshSimulationComponent.ComponentReplication=True
+StaticMeshSimulationComponent.Activation=True
+StaticMeshSimulationComponent.Cooking=True
+StaticMeshSimulationComponent.Events=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Physics=True
+TextRenderActor.Lighting=True
+TextRenderActor.Rendering=True
+TextRenderActor.VirtualTexture=True
+TextRenderActor.Tags=True
+TextRenderActor.Activation=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/BluePrintTutorial
-MRUItem2=/Game/ThermoVision/Thermal_Mat_Inst
-MRUItem3=/Game/LandscapeHole
-MRUItem4=/Game/NightVision/PP_Camera_Inst
-MRUItem5=/Game/NightVision/PP_Camera
-MRUItem6=/Game/ThermoVision/Thermal_Mat
-MRUItem7=/Game/Flag_Cloth
-MRUItem8=/Game/Fog
-MRUItem9=/Game/NightScene
-MRUItem10=/Game/NightVision
-MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem13=/Game/Meshes/FLAG/Flag_PhysicsAsset
-MRUItem14=/Game/Meshes/FLAG/Flag
-MRUItem15=/Game/Meshes/FLAG/Pole_MAT
-MRUItem16=/Game/Meshes/FLAG/UE4_Flag
-MRUItem17=/Game/Meshes/FLAG/Flag_MAT
-MRUItem18=/Game/NightVision/ColorLUT_NightVision
-MRUItem19=/Game/Door
+MRUItem0=/Game/BuildSystem/CUBE
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem3=/Game/BluePrintTutorial
+MRUItem4=/Game/ThermoVision/Thermal_Mat_Inst
+MRUItem5=/Game/LandscapeHole
+MRUItem6=/Game/NightVision/PP_Camera_Inst
+MRUItem7=/Game/NightVision/PP_Camera
+MRUItem8=/Game/ThermoVision/Thermal_Mat
+MRUItem9=/Game/Flag_Cloth
+MRUItem10=/Game/Fog
+MRUItem11=/Game/NightScene
+MRUItem12=/Game/NightVision
+MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem14=/Game/Meshes/FLAG/Flag_PhysicsAsset
+MRUItem15=/Game/Meshes/FLAG/Flag
+MRUItem16=/Game/Meshes/FLAG/Pole_MAT
+MRUItem17=/Game/Meshes/FLAG/UE4_Flag
+MRUItem18=/Game/Meshes/FLAG/Flag_MAT
+MRUItem19=/Game/NightVision/ColorLUT_NightVision
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/FogCloud_MAT.FogCloud_MAT=0
@@ -1264,6 +1301,7 @@ MRUItem19=/Game/Door
 /Game/NightVision/PP_Camera_Inst.PP_Camera_Inst=0
 /Game/ThermoVision/Thermal_Mat_Inst.Thermal_Mat_Inst=0
 /Game/ThermoVision/Thermal_Mat.Thermal_Mat=0
+/Game/BuildSystem/CUBE.Cube=0
 
 [MaterialEditor]
 PrimType=1
@@ -1324,7 +1362,7 @@ bMaterialQualityUsed[2]=0
 [DetailPropertyExpansion]
 ParticleSystem="\"Object.Bounds.FixedRelativeBoundingBox\" \"Object.Occlusion.CustomOcclusionBounds\" \"Object.Materials.NamedMaterialSlots\" "
 FXSystemAsset="\"Object.Bounds.FixedRelativeBoundingBox\" \"Object.Occlusion.CustomOcclusionBounds\" \"Object.Materials.NamedMaterialSlots\" "
-Object="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+Object=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
@@ -1355,8 +1393,8 @@ Landscape="\"Object.Landscape.LandscapeMaterialsOverride\" "
 LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Console.ConsoleKeys\" "
 PostProcessComponent="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
-SceneComponent="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
-ActorComponent="\"Object.Settings\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+SceneComponent=
+ActorComponent=
 FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -1402,7 +1440,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/radyz/Documents/Unreal Projects/trening/Content
+UNR=E:/GitHub/RAdek/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/radyz/Documents/Unreal Projects/trening/Content/
 FBX=../../../../../../Users/radyz/Documents/Unreal Projects/trening/Content/
 FBXAnim=../../../../../../Users/radyz/Documents/Unreal Projects/trening/Content/
@@ -2332,5 +2370,9 @@ SingleInstantiationPlacementMode=0
 
 [ColorGrading]
 Color_Grading_Global_Saturation_IsRGB=False
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 
